# fastapi-alchemy-docker-template

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  setup_secrets.cmd  setup_secrets.sh
app/: __main__.py  app.py  settings.py  tables.py
